[gd_scene load_steps=2 format=3 uid="uid://ch7jqdfbu4el4"]

[ext_resource type="Script" uid="uid://corykvcfxne75" path="res://scenes/entities/shield/player_shield.gd" id="1_8pxy6"]

[node name="Shield" type="Node2D"]
visible = false
z_index = 1
script = ExtResource("1_8pxy6")
max_hits = 10
base_arc_angle_degrees = 90.0
offset_distance = 0.755
recharge_rate = 10.0

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShieldArea"]
polygon = PackedVector2Array(0, 0, 18, -10, 18, 10)

[node name="ShieldArc" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(12, -8, 12, 8)
width = 4.0

[node name="CooldownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5
one_shot = true
